# advent-of-code-2023

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
aoc2023/: common.py  dec0.py  dec0_test.py  dec1.py  dec1_test.py  dec2.py  dec2_test.py  dec3.py  dec3_test.py  main.py
scripts/: check.py
