[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Peter Eliasson <warackta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip = ["venv"]

[tool.mypy]
disallow_untyped_defs = true

